--- a/package.json
+++ b/package.json
@@ -11,21 +11,29 @@
     "build": "NODE_ENV=production webpack --optimize-minimize",
     "dev": "webpack --watch",
     "start": "node .",
-    "test": "JASMINE_CONFIG_PATH=./jasmine.json jasmine"
+    "test": "JASMINE_CONFIG_PATH=./jasmine.json jasmine",
+    "lint": "eslint ./src"
   },
   "dependencies": {
     "compression": "^1.7.1",
     "express": "^4.16.2",
+    "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "jasmine": "^2.8.0",
     "webpack": "^3.8.1",
     "webpack-runtime-analyzer": "^1.5.0"
