feat: add codestyle airbnb, editorconfig

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,14 @@
 {
     "extends": "airbnb",
     "env": {
-        "browser": true
+        "browser": true,
+        "jasmine": true
     },
-    "parser": "babel-eslint"
+    "parser": "babel-eslint",
+    "plugins": [
+        "jasmine"
+    ],
+    "rules": {
+        "no-console": [0]
+    }
 }
