--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "webpack --watch",
     "start": "node .",
     "test": "JASMINE_CONFIG_PATH=./jasmine.json jasmine",
-    "lint": "eslint ./src"
+    "lint": "eslint ."
   },
   "dependencies": {
     "compression": "^1.7.1",
@@ -32,6 +32,7 @@
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jasmine": "^2.9.1",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "jasmine": "^2.8.0",
