--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-jasmine": "^2.9.1",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "immutability-helper": "^2.5.1",
     "jasmine": "^2.8.0",
     "webpack": "^3.8.1",
     "webpack-runtime-analyzer": "^1.5.0"
