--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.16.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-textarea-autosize": "^5.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
