--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "pm2 start ecosystem.dev.config.js",
     "start": "node .",
     "test": "JASMINE_CONFIG_PATH=./jasmine.json jasmine",
-    "lint": "eslint ."
+    "lint": "eslint -c .eslintrc.json ."
   },
   "dependencies": {
     "compression": "^1.7.1",
@@ -21,24 +21,24 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-jss": "^8.1.0",
+    "react-jss": "^8.2.0",
     "react-textarea-autosize": "^5.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.3",
+    "babel-eslint": "^8.1.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^4.13.1",
+    "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jasmine": "^2.9.1",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.4.0",
-    "immutability-helper": "^2.6.0",
+    "immutability-helper": "^2.6.2",
     "jasmine": "^2.8.0",
     "webpack": "^3.10.0",
     "webpack-runtime-analyzer": "^1.5.0"
