--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "compression": "^1.7.1",
     "express": "^4.16.2",
     "keypress.js": "^2.1.4",
+    "lowdb": "^1.0.0",
+    "nanoid": "^1.0.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-jss": "^8.2.0",
+    "react-modal": "^3.1.10",
     "react-textarea-autosize": "^5.2.1"
   },
   "devDependencies": {
